# postgly

./: .gitignore  .tool-versions  LICENSE  Makefile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: release-drafter.yml
.github/workflows/: ci.yml  release-drafter.yml  release.yml
docs/: index.html  robots.txt  script.js  sitemap.xml  styles.css
scripts/: install.ps1  install.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: connections.rs  explorer.rs  llm.rs  mod.rs  settings.rs  updater.rs
src-tauri/src/connections/: mod.rs
src-tauri/src/db/: driver.rs  mod.rs  postgres.rs  sql_safety.rs
src-tauri/src/llm/: agent.rs  chat.rs  fuzzy.rs  mod.rs  tools.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/vault/: mod.rs
src-tauri/tests/: postgres_driver.rs
src/components/: language-switcher.tsx  logo.ts  theme-provider.tsx  theme-toggle.tsx
src/components/ui/: button.tsx  confirm-dialog.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  resizable.tsx
src/features/about/: AboutDialog.tsx  use-version-check.ts
src/features/agent-chat/: AgentChatPanel.tsx  ApprovalCard.tsx  Composer.tsx  Markdown.tsx  MessageList.tsx  SessionList.tsx  api.ts  storage.ts  types.ts  useAgentChat.ts
src/features/connections/: ConnectionForm.tsx  ConnectionRow.tsx  ConnectionsScreen.tsx  api.ts  types.ts  use-connections.ts
src/features/explorer/: CommandHistory.tsx  CreateSchemaDialog.tsx  DestructiveConfirmDialog.tsx  ExplainDialog.tsx  ExplorerScreen.tsx  ExportDialog.tsx  NlQueryBar.tsx  QuickFilter.tsx  RecordDialog.tsx  ResultGrid.tsx  SchemaTree.tsx  SqlEditor.tsx  TableEditorDialog.tsx  TableRecords.tsx  TableStructure.tsx  api.ts  pgTypes.ts  types.ts
src/features/settings/: SettingsScreen.tsx  api.ts  types.ts
src/features/settings/categories/: AppearancePanel.tsx  GeneralPanel.tsx  LlmConfigPanel.tsx  SafetyPanel.tsx
src/features/tabs/: TopBar.tsx  types.ts
src/i18n/: index.tsx
src/i18n/dictionaries/: en.ts  es.ts  pt.ts
src/lib/: copy-prefs.ts  utils.ts
