[package]
name = "postgly"
version = "0.1.0"
description = "Postgly — a modern multi-database management app"
authors = ["Alisson Pelizaro"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name unique so it doesn't conflict with the
# bin name. This is only an issue on Windows, see
# https://github.com/rust-lang/cargo/issues/8519
name = "postgly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
