[package]
name = "postgly"
version = "0.1.0"
description = "Postgly — a modern multi-database management app"
authors = ["Alisson Pelizaro"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name unique so it doesn't conflict with the
# bin name. This is only an issue on Windows, see
# https://github.com/rust-lang/cargo/issues/8519
name = "postgly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
] }
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "crypto-rust",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

[features]
# Swap the OS keyring for an in-memory store so tests don't touch the
# host's real Keychain / Credential Manager / Secret Service. Enabled by
# the CI test pipeline; never enabled in release builds.
mock-keyring = []

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
tauri = { version = "2", features = ["test"] }
wiremock = "0.6"
